--- a/src/scss/assets/pattern.scss
+++ b/src/scss/assets/pattern.scss
@@ -56,19 +56,13 @@ body {
 
 .title-section {
    position: relative;
-   // padding-bottom: 16px;
    padding-bottom: 10px;
    margin-bottom: 20px;
    font-weight: 900;
    font-size: 20px;
    text-align: center;
    text-transform: uppercase;
-
-   // text-decoration: underline;
-   // text-decoration-color: var(--color-yellow);
-   // text-decoration-thickness: 8px;
-   // text-underline-offset: 8px;
-
+   line-height: 100%;
 
    @media (min-width:780px) {
       text-align: start;
@@ -83,25 +77,6 @@ body {
       border-bottom: 8px solid var(--color-yellow);
       display: inline-block;
    }
-
-   // span {
-   //    position: relative;
-   //    width: fit-content;
-   //    text-align: center;
-
-   //    &::after {
-   //       content: '';
-   //       position: absolute;
-   //       bottom: -8px;
-   //       left: 50%;
-   //       transform: translateX(-50%);
-   //       height: 8px;
-   //       width: 100%;
-   //       // width: fit-content;
-   //       background-color: var(--color-yellow);
-   //    }
-   // }
-
 }
 
 .text-section {
