--- a/src/scss/others/contacts.scss
+++ b/src/scss/others/contacts.scss
@@ -1,29 +1,28 @@
 .contacts {
-
+   padding-top: 30px;
    margin-bottom: 65px;
 
-   &__container {}
+   @media (min-width:780px) {
+      padding-top: 40px;
+   }
 
-   &__title {}
+   @media (min-width:1120px) {
+      padding-top: 55px;
+   }
+
+   &__container {}
 
    &__body {
       display: flex;
       flex-direction: column;
-      gap: 30px;
-
-      @media (min-width:780px) {
-         flex-direction: row;
-      }
 
       @media (min-width:1120px) {
+         flex-direction: row;
          gap: 40px;
       }
    }
 
    &__info {
-      // flex: 0 1 360px;
-      display: flex;
-      gap: 20px;
       font-weight: 500;
       font-size: 12px;
       line-height: 137%;
@@ -34,43 +33,117 @@
       }
 
       @media (min-width:1120px) {
+         flex: 0 0 37%;
          font-size: 16px;
+         display: flex;
+         flex-direction: column;
+      }
+   }
+
+   &__info-block {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+
+      @media (min-width:1120px) {
+         align-items: flex-start;
+         border-bottom: 8px solid var(--color-yellow);
+      }
+   }
+
+   &__info-group {
+      padding-bottom: 10px;
+      max-width: 200px;
+
+      @media (min-width:780px) {
+         max-width: 60%;
       }
    }
 
    &__address {
-      flex: 1 1 auto;
+      margin-bottom: 10px;
+
+      @media (min-width:1120px) {
+         margin-bottom: 20px;
+         flex: 1 1 auto;
+      }
    }
 
    &__address-item {
-      margin-bottom: 25px;
+      margin-bottom: 10px;
+
+      @media (min-width:1120px) {
+         margin-bottom: 25px;
+         flex: 1 1 auto;
+      }
+   }
+
+   &__address-sell {
+      @media (min-width:780px) {
+         display: flex;
+         gap: 25px;
+      }
+
+      @media (min-width:1120px) {
+         flex-direction: column;
+         gap: 0;
+      }
    }
 
    &__weekday {
       text-transform: uppercase;
    }
 
+
    &__social {
       display: flex;
       gap: 9px;
-      flex-wrap: wrap;
-      flex-direction: column;
+      // flex-direction: column;
 
       @media (min-width:780px) {
-         margin-top: 25px;
          flex-direction: row;
+         flex-wrap: wrap;
          gap: 21px;
       }
    }
 
+   &__info-img {
+      margin-left: -10%;
+      flex: 0 0 max(140px, 30%);
+
+      @media (min-width:780px) {
+         flex: 0 0 30.3%;
+         margin-top: -40px;
+      }
+
+      @media (min-width:1120px) {
+         flex: 0 0 57%;
+         margin-top: 0;
+      }
+
+      img {
+         width: 100%;
+      }
+   }
+
    &__map {
-      min-height: 258px;
+      height: 69vw;
       flex: 1 1 auto;
+      display: flex;
+      align-items: stretch;
+
+      @media (min-width:780px) {
+         height: 56vw;
+      }
+
+      @media (min-width:1120px) {
+         align-self: stretch;
+         height: auto;
+         min-height: 439px;
+      }
 
       iframe {
          width: 100%;
-         height: 100%;
-         min-height: 258px;
       }
    }
 }
